@@ -23,10 +23,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <graphql.spring.starter.version>11.1.0</graphql.spring.starter.version>
         <h2.version>1.4.200</h2.version>
-        <jdk.release>17</jdk.release>
         <lombok.version>1.18.20</lombok.version>
+        <java.version>11</java.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -118,7 +117,7 @@
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <release>${jdk.release}</release>
+                        <release>${java.version}</release>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.projectlombok</groupId>
@@ -128,7 +127,7 @@
                             <annotationProcessorPath> <!-- necessary to generate META-INF/spring-configuration-metadata.json -->
                                 <groupId>org.springframework.boot</groupId>
                                 <artifactId>spring-boot-configuration-processor</artifactId>
-                                <version>2.4.4</version>
+                                <version>2.6.3</version>
                             </annotationProcessorPath>
                         </annotationProcessorPaths>
                     </configuration>
@@ -159,54 +158,26 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${jdk.release}</source>
-                    <target>${jdk.release}</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${jdk.release}</source>
-                    <target>${jdk.release}</target>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
     <profiles>
         <profile>
-            <id>default</id>
+            <id>jdk16</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <jdk>16</jdk>
             </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java${jdk.release}</id>
-            <activation>
-                <jdk>${jdk.release}</jdk>
-            </activation>
+            <properties>
+                <java.version>16</java.version>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
-                            <release>${jdk.release}</release>
-                            <!-- Below is needed to make lombok work with JDK${jdk.release}.  See https://github.com/rzwitserloot/lombok/issues/2681 -->
+                            <release>${java.version}</release>
+                            <!-- Below is needed to make lombok work with JDK16.  See https://github.com/rzwitserloot/lombok/issues/2681 -->
                             <fork>true</fork>
                             <compilerArgs>
                                 <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
